--- a/app/src/sass/_home.scss
+++ b/app/src/sass/_home.scss
@@ -9,8 +9,9 @@
     -moz-transform:translateZ(0px);
     -o-transform:translateZ(0px);
     transform:translateZ(0px);
-    height:100%;
+    height:125%; /* To compensate for mobile browser address bar space */
     top:0;
+    left:0;
 }
 
 #hero
@@ -20,6 +21,10 @@
     z-index:1;
     position: relative;
     padding:200px 0;
+    -webkit-transform:translateZ(1px);
+    -moz-transform:translateZ(1px);
+    -o-transform:translateZ(1px);
+    transform:translateZ(1px);
 
     h1, h2
     {
